--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "pytlai"
-version = "0.1.0"
+version = "0.1.1"
 description = "Python Translation AI - Translate Python scripts or web pages on the fly to any human language"
 readme = "README.md"
 license = "MIT"
@@ -60,10 +60,10 @@ dev = [
 ]
 
 [project.urls]
-Homepage = "https://github.com/pytlai/pytlai"
-Documentation = "https://github.com/pytlai/pytlai#readme"
-Repository = "https://github.com/pytlai/pytlai"
-Issues = "https://github.com/pytlai/pytlai/issues"
+Homepage = "https://labs.zaguanai.com/en/experiments/pytlai"
+Documentation = "https://github.com/ZaguanLabs/pytlai#readme"
+Repository = "https://github.com/ZaguanLabs/pytlai"
+Issues = "https://github.com/ZaguanLabs/pytlai/issues"
 
 [project.scripts]
 pytlai = "pytlai.cli:main"
