feat: v1.0.0 - Translation style, glossary, locale clarifications
- Add TranslationStyle type (formal, neutral, casual, marketing, technical)
- Add user-provided glossary for preferred phrase translations
- Add locale clarifications for Norwegian, Chinese, Portuguese, English, Spanish
- Add is_rtl() and get_dir() methods on Pytlai class
- Expand language code mappings with country codes (gb, mx, jp, etc.)
- Improve system prompt with JSON envelope, quality check, idiom handling
- Lower temperature from 0.3 to 0.1 for deterministic translations
- Update development status to Production/Stable

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "pytlai"
-version = "0.1.1"
+version = "1.0.0"
 description = "Python Translation AI - Translate Python scripts or web pages on the fly to any human language"
 readme = "README.md"
 license = "MIT"
@@ -25,7 +25,7 @@ keywords = [
     "gettext",
 ]
 classifiers = [
-    "Development Status :: 3 - Alpha",
+    "Development Status :: 5 - Production/Stable",
     "Intended Audience :: Developers",
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
